@@ -1,6 +1,9 @@
 v3.6.5 (XXXX-XX-XX)
 -------------------
 
+* Fixed potentially undefined behavior in syslog logger, with ident string going 
+  out of scope after `openlog` was called.
+
 * Fixed that the hotbackup agency lock is released under all circumstances using
   scope guards. This addresses a rare case in which the lock was left behind.
 
